# local-ai-document-analyzer

./: .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt  ui.py
app/agent/: extractor.py  local_llm.py  summarizer.py  summary_strategy.py
app/agent/parsers/: extraction_response_parser.py  summary_response_parser.py
app/api/: rag_router.py  routes.py
app/config/: settings.py
app/export/: markdown_exporter.py
app/parsers/: doc_parser.py  docx_parser.py  image_parser.py  pdf_ocr_parser.py  pdf_parser.py  rtf_parser.py  txt_parser.py  xlsx_parser.py
app/pipeline/: etl_pipeline.py
app/prompts/: extraction_prompt.py  global_summary_prompt.py  section_summary_prompt.py  summary_prompt.py
app/rag/: answer_builder.py  document_manager.py  embedder.py  index_builder.py  index_store.py  retriever.py
app/schemas/: document.py  extraction.py  rag.py  summary.py
app/services/: document_service.py  document_structure.py  image_preprocessor.py  ocr_extractor.py  ocr_filter.py  processing_stats.py  quality_scorer.py  text_cleaner.py  text_splitter.py
app/utils/: file_types.py  logger.py
