[project]
name = "ai-agent-document-service"
version = "0.1.0"
description = "Local AI agent for document analysis"
authors = [
    {name = "Alexander", email = "schwarzepolizei@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "fastapi>=0.138.1,<0.139.0",
    "uvicorn>=0.49.0,<0.50.0",
    "pydantic>=2.13.4,<3.0.0",
    "python-multipart>=0.0.32,<0.0.33",
    "pillow>=12.2.0,<13.0.0",
    "opencv-python>=4.13.0.92,<5.0.0.0",
    "numpy>=2.5.0,<3.0.0",
    "pandas>=3.0.4,<4.0.0",
    "openpyxl>=3.1.5,<4.0.0",
    "python-docx>=1.2.0,<2.0.0",
    "pdfplumber>=0.11.10,<0.12.0",
    "pymupdf>=1.28.0,<2.0.0",
    "pytesseract>=0.3.13,<0.4.0",
    "striprtf>=0.0.32,<0.0.33",
    "sentence-transformers>=5.6.0,<6.0.0",
    "faiss-cpu>=1.14.3,<2.0.0",
    "streamlit>=1.58.0,<2.0.0",
    "requests>=2.34.2,<3.0.0"
]

[dependency-groups]
dev = [
    "pytest>=8.4.0,<9.0.0",
    "ruff>=0.14.0,<0.15.0",
    "black>=25.0.0,<26.0.0",
    "mypy>=1.18.0,<2.0.0",
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ["py312"]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]